--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,30 @@
-flask==1.1.2
-numpy==1.19.5
-beautifulsoup4==4.6.3
-requests==2.20.1
-scipy
-pandas==1.3.1
-lxml==4.5.2
-line-bot-sdk==1.19.0
+
+Flask==1.1.4
+
+numpy==1.16.6
+
+beautifulsoup4==4.9.3
+
+requests==2.27.1
+
+scipy==1.2.3
+
+pandas==0.24.2
+
+lxml==4.9.1
+
+line-bot-sdk==1.20.0
+
 datetime
+
 matplotlib
-gspread==4.0.1
+
+gspread==3.7.0
+
 oauth2client==4.1.3
+
 pyimgur
+
 mpl_finance
+
 arrow
